# WebcamSwitchPoC

./: CMakeLists.txt  Main.qml  main.cpp
